# SysOpy

./: README.md
cw01/: README.md  komentarz.txt
cw01/zad1/: CMakeLists.txt  Makefile  address_book.c  address_book.h
cw01/zad2/: CMakeLists.txt  Makefile  main.c
cw01/zad3a/: CMakeLists.txt  Makefile  maindyn.c  results.txt
cw01/zad3b/: CMakeLists.txt  Makefile  maindyn.c  results.txt
cw01/zad4/: CMakeLists.txt  Makefile  gdb.txt  main.c
cw02/: README.md
cw02/zad1/: CMakeLists.txt  libf.c  libf.h  main.c  results.txt  sysf.c  sysf.h
cw02/zad2/: CMakeLists.txt  nftwf.c  nftwf.h  statf.c  statf.h  zad2a.c  zad2b.c
cw02/zad3/: CMakeLists.txt  locks.c  locks.h  main.c  rygling
cw03/: README.md
cw03/zad1/: CMakeLists.txt  interpreter.c  interpreter.h  main.c
cw03/zad2/: CMakeLists.txt  endless.c  interpreter.c  interpreter.h  main.c  malloc.c
cw04/: README.md
cw04/zad1/: CMakeLists.txt  main.c
cw04/zad2/: CMakeLists.txt  main.c
cw04/zad3/: CMakeLists.txt  main.c
cw05/: README.md
cw05/zad1/: CMakeLists.txt  zad1.c
cw05/zad2/: CMakeLists.txt  master.c  slave.c
cw06/: README.md
cw06/zad1/: CMakeLists.txt  client.c  common.h  server.c
cw06/zad2/: CMakeLists.txt  client.c  common.h  server.c
cw08/: README.md
cw08/zad1/: CMakeLists.txt  file_generator.c  zad1a.c  zad1b.c  zad1c.c
cw08/zad2/: CMakeLists.txt  zad2a.c  zad2b.c
cw09/: README.md
cw09/zad1/: CMakeLists.txt  zad1a.c  zad1b.c
